--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_GOOGLE_CLIENT_ID=938511311328-j21ddv9nonj4942qkfbi155u216liadb.apps.googleusercontent.com
-VITE_API_BASE_URL=http://localhost:8080
+VITE_API_BASE_URL=https://crypto-api-byjk.onrender.com
